# custom_shell

./: .gitignore  CMakeLists.txt  README.md  test_simple  test_simple.c
docs/: Doxyfile.in
include/: builtins.h  executor.h  parser.h  shell.h  utils.h
src/: builtins.c  executor.c  main.c  parser.c  shell.c  utils.c
tests/: CMakeLists.txt
